<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mor">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bilgiAlma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  ?  "
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/mor"
            android:src="@drawable/ic_menu_vert" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="75sp"
                android:textStyle="bold"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="35dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/basic"
                android:gravity="center"
                android:text="@string/main_welcome"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/basic"
                android:gravity="center"
                android:text="@string/main_head1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="30dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/agnoHesapBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_green_button"
                android:fontFamily="@font/aclonica"
                android:text="@string/main_btns1"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/agnoKurtarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_green_button"
                android:fontFamily="@font/aclonica"
                android:text="@string/main_btns2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/transBttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_green_button"
                android:fontFamily="@font/aclonica"
                android:text="@string/main_btns3"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="40dp"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/gizlilik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/aclonica"
            android:text="@string/main_head2"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   ●   "
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/gbsilme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/aclonica"
            android:text="@string/main_head3"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
